hard-gists/9343730/run.log
=== Docker Run Log for 9343730 ===
Started at: Mi 29. Okt 18:23:27 CET 2025

[2025-10-29 18:23:27] START: Running container for 9343730
[2025-10-29 18:23:28] SUCCESS: Container 6e5dcbe70ad8d124c6e8330cb35423a727f756126143838b685c0fc97a2a29e1 started for 9343730
=== Container logs for 9343730 ===
  File "/snippet.py", line 52
    print "server started"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9343730 ===
[2025-10-29 18:23:30] INFO: Container 6e5dcbe70ad8d124c6e8330cb35423a727f756126143838b685c0fc97a2a29e1 has stopped
